src/test/deca/context/valid/class/Cast_between_int_and_float.deca
// Description:
//    Test de declaration d'une classe avec une methode dedans
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 20/01/2022


{
    int x = (int) (5.0);
    int y = (int) (5.0f);
    float z = (float) (5);
}
